# kb-dashboard-backend

./: .gitignore  CHANGELOG.md  kb_service.py  main.py  pyproject.toml  ws_events.py  ws_manager.py
.github/workflows/: ci.yml
routes/: files.py  helpers.py  projects.py  stats.py  tasks.py
tests/: conftest.py  helpers.py  test_files.py  test_kb_service.py  test_projects.py  test_stats.py  test_tasks.py
tests/e2e/: conftest.py  test_api_workflows.py
